--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -101,7 +101,7 @@ height:40px;
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
     gap: 20px;
-    margin: 0px 15px;
+    margin: 0px 15px 0px 19px;
 }
 
 .heading{
@@ -149,21 +149,22 @@ height:40px;
 
 .search-dropdown {
   position: absolute;
-  top: 100%;
-  width: 100%;
   background: white;
   border-radius: 6px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   z-index: 10;
+  width: 300px;
 }
 
 .search-item {
   padding: 10px;
   cursor: pointer;
+  border-bottom: 1px solid #b8b3b3;
 }
 
 .search-item:hover {
   background: #f5f5f5;
+  border-radius: 6px;
 }
 
 .search-meta {
