--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     color: black;
+    text-decoration: none;
 }
 
 .Options:hover{
@@ -154,6 +155,13 @@ height:40px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   z-index: 10;
   width: 300px;
+  top: 10%;
+}
+
+@media (max-width:700){
+    .search-dropdown{
+        top: 18%;
+    }
 }
 
 .search-item {
@@ -175,4 +183,89 @@ height:40px;
 .no-result{
     font-size: 10px;
     text-align: center;
+}
+
+footer{
+    position: static;
+}
+
+@media (min-width:768px) {
+    footer{
+        position: fixed;
+        bottom: 0;
+    }
+}
+
+.opt{
+    width:'20px';
+    margin:'0px 5px';
+}
+
+.navbar {
+  background: #dedede;
+}
+
+.navbar-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.navbar-brand {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.navbar-logo {
+  width: 40px;
+  height: 40px;
+}
+
+.navbar-title {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 25px;
+  color: #a76ed0;
+}
+
+@media (max-width: 700px) {
+  .navbar-row {
+    flex-direction: column;
+    gap: 12px;
+  }
+}
+
+.Input-Box{
+    display:flex;
+    flex-direction:column;
+    gap:3px;
+    width:300px;
+    font-size:15px;
+}
+
+.Input-bar{
+    border:'1px solid grey';
+    border-radius:20px;
+    width:300px;
+    padding:0px 5px;
+}
+
+.pdf-title{
+    width:150px;
+    font-size:14px;
+    font-weight:bold;
+    color:black;
+}
+
+.pdf-detail{
+    font-size:13px;
+    width:90%;
+}
+
+.Common{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
